Add datadog configuration

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ export HEROKU_API_KEY=00000000-0000-0000-0000-000000000000
 export HEROKU_APP_NAME=heroku-app
 export GOOGLE_PROJECT_ID=some-project-291812
 export GCS_BUCKET_NAME=bucket-name
+export DD_API_KEY=100200
